src/scss/modules/_temporary.scss
@mixin hover-shadow() {
	box-shadow: 0 1px 4px rgba($global-black,.2);
	transition: all .2s ease-in-out 0s;
	&:hover {
		box-shadow: 0 15px 20px rgba($global-black,.2);
	}
}

@mixin size($width: 40px, $height: 40px) {
	width: $width; height: $height;
}

@mixin bg-overlay($color, $overlay, $image) {
	background: linear-gradient(45deg, rgba($color, $overlay) 0%, rgba($color, $overlay) 100%), no-repeat center/cover url($image);
	background-attachment: fixed;
}

$bg-img: '~/img/background-min.jpg';

* {
	-webkit-font-smoothing: antialiased;
}
#main {
  background-color: $global-dark-grey;
  @include bg-overlay($global-dark-grey, .75, $bg-img);
  height: 100vh;
  padding: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
  .container {
    width: 980px;
    margin: 0 auto;
  }
  .grid {
    margin-left: 0;
  }
  .hero {
    text-align: center;
    margin-bottom: 28px;
    h1, h2, h3, h4, h5, h6, p {
      color: $global-white;
			text-shadow: 0 1px 4px rgba($global-black,.2);
    }
    a {
      color: $global-primary;
      transition: all .2s ease-in-out 0s;
      &:hover {
        color: $global-white;
      }
    }
    .headline {
      margin-bottom: 0;
    }
    .subline {
      margin-top: 0;
    }
    hr {
      border: 1px solid $global-primary;
      width: 50%;
    }
    .social {
      margin: 14px*2 0 14px*3 0;
      ul {
        padding: 0;
        li {
          display: inline;
          margin-right: 14px;
          &:last-of-type {
            margin-right: 0;
          }
          a {
						font-size: 18px;
            background: $global-white;
						fill: $global-primary;
            border-radius: 50%;
            @include size;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            @include hover-shadow;
            transition: all .2s ease-in-out 0s;
            &:hover {
              background: $global-primary;
              color: $global-white;
							fill: $global-white;
							@extend .pulse;
            }
          }
        }
      }
    }
  }
  form {
  	max-width: 600px;
  	display: flex;
  	flex-direction: column;
    margin: 0 auto;
  	.inline {
  		display: flex;
  		flex-direction: row;
  		margin-bottom: 14px;
      .field {
        width: 50%;
        display: flex;
        flex-direction: column;
        &:last-of-type {
          margin-left: 14px;
        }
      }
  	}
    label {
      color: $global-white;
			text-shadow: 0 1px 4px rgba($global-black,.2);
      padding-bottom: 8px;
    }
    input, textarea {
      border: none;
      border-radius: 2px 2px 0 0;
      padding: 14px;
      resize: none;
      &:active, &:focus {
        outline: none;
      }
    }
    input {
      border-radius: 2px;
      @include hover-shadow;
      &:-webkit-autofill {
        -webkit-box-shadow: 0 0 0px 1000px $global-white inset;
      }
    }
    .bigBox {
      display: flex;
      flex-direction: column;
      @include hover-shadow;
      button {
				border: none;
        background: $global-primary;
        border-top: 1px solid $global-primary;
				color: $global-white;
        padding: 14px;
        box-shadow: none;
        border-radius: 0 0 2px 2px;
        cursor: pointer;
        transition: all .2s ease-in-out 0s;
        &:hover {
          background: $global-white;
          border-top: 1px solid $global-lightest-grey;
          color: $global-primary;
        }
        &:active, &:focus {
          outline: none;
        }
      }
    }
  }
	footer {
		margin-top: 100px;
		font-size: .8em;
		color: $global-white;
	}
}

svg[role="img"] {
	width: 20px;
	height: 20px;
}

@media (max-width: 600px) {
	hr {
		width: 100%;
	}

	.container {
    width: 95vw !important;
  }

	#main {
		// Stops vertical scrolling on mobile
		height: calc(100vh - ((14px * 4) * 2));
		padding: 14px*4 0;
		form {
			.inline {
				flex-direction: column;
				.field {
					width: 100% !important;
					&:last-of-type {
						margin-left: 0 !important;
						margin-top: 14px;
					}
				}
			}
		}
	}

	svg[role="img"] {
		width: 30px;
		height: 30px;
	}

	li {
		a.icon {
			width: 60px !important;
			height: 60px !important;
		}
	}

}

.resume {
	position: fixed;
	top: 28px;
	right: 28px;
	color: $global-primary;
	transition: all .2s ease-in-out 0s;
	&:hover {
		color: $global-white;
	}
}

@media (max-width: 600px) {
	.resume {
		right: 50%;
		transform: translateX(50%);
	}
}

